8256425: Obsolete Biased Locking in JDK 18